--- a/package.json
+++ b/package.json
@@ -8,5 +8,5 @@
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
-  "dependencies": { "acorn": "^8.9.0", "astring": "^1.8.6" }
+  "dependencies": { "acorn": "^8.9.0", "astring": "^1.8.6", "cheerio": "^1.0.0-rc.12" }
 }
