--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
         "types": [
             "bun-types", // add Bun global
             "./types/acorn.d.ts",
-            "./types/es2022.d.ts"
+            "./types/es2022.d.ts",
+            "./types/util.d.ts"
         ]
     },
     "exclude": ["./chunks/*"]
